--- a/src/components/events/RegionChips.module.css
+++ b/src/components/events/RegionChips.module.css
@@ -45,5 +45,4 @@
 
 .chipBadge {
   font-size: 0.68rem;
-  opacity: 0.7;
 }
